--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "npm run build && next export -o _static"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -14,5 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactstrap": "^9.1.5"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.30.3",
+    "netlify-cli": "^12.10.0"
   }
 }
